--- a/src/containers/User/User.scss
+++ b/src/containers/User/User.scss
@@ -7,9 +7,7 @@
   overflow-y: auto;
   margin: 10px auto;
   padding: 10px;
-  border: 1px solid #ccc;
   border-radius: 4px;
-  background-color: #f9f9f9;
   box-sizing: border-box;
 }
 
